modify warehouse class

--- a/src/app/modules/inventory/components/warehouse/warehouse.html
+++ b/src/app/modules/inventory/components/warehouse/warehouse.html
@@ -47,7 +47,7 @@
                         <div class="field">
                             <mat-form-field appearance="outline">
                                 <mat-label>State</mat-label>
-                                <input type="text" id="state" class="field field-state" matInput />
+                                <input type="text" id="state" class="field field-state" matInput [field]="component.form_warehouse.address.state" />
                             </mat-form-field>
                         </div><!-- .field -->
                         <div class="field">
