--- a/src/app/modules/user-registration/components/sign-up/sign-up.html
+++ b/src/app/modules/user-registration/components/sign-up/sign-up.html
@@ -1,7 +1,7 @@
 <div class="component component-sign-up">
     <mat-card class="sign-up-card" appearance="outlined">
         <div class="form-wrapper">
-            <form id="form_sign_up" class="sign-up" method="post" action="" [formGroup]="component.signUpForm" (ngSubmit)="sign_up()">
+            <form id="form_sign_up" class="sign-up" method="post" action="" (submit)="sign_up($event)">
                 <mat-card-header>
                     <mat-card-title>Sign Up</mat-card-title>
                     <mat-card-subtitle>An email will be sent to this email address with a link to continue the user registration</mat-card-subtitle>
@@ -10,25 +10,20 @@
                     @if (component.error != '') {
                         <mat-error>{{ component.error }}</mat-error>
                     }
+                    @if (component.form_signup.email().touched() && component.form_signup.email().invalid()) {
+                        @for(error of component.form_signup.email().errors(); track error) {
+                            <mat-error>{{ error.message }}</mat-error>
+                        }
+                    }
                     <div class="field field-wrapper field-wrapper-block">
                         <mat-form-field appearance="outline">
                             <mat-label>Email</mat-label>
-                            <input type="email" id="email" name="email" placeholder="Email address" required matInput formControlName="email"/>
+                            <input type="email" id="email" placeholder="Email address" matInput [field]="component.form_signup.email"/>
                         </mat-form-field>
-                        @if (component.signUpForm.get('email')?.invalid && (component.signUpForm.get('email')?.dirty || component.signUpForm.get('email')?.touched)) {
-                        <div class="errors">
-                            @if (component.signUpForm.get('email')?.errors?.['required']) {
-                                <mat-error>Email is required</mat-error>
-                            }
-                            @if (component.signUpForm.get('email')?.errors?.['email']) {
-                                <mat-error>Invalid email address</mat-error>
-                            }
-                        </div><!-- errors -->
-                        }
                     </div><!-- .field -->
                 </mat-card-content>
                 <mat-card-actions>
-                    <button type="submit" class="btn-sign-up" mat-fab extended [disabled]="component.signUpForm.invalid">
+                    <button type="submit" class="btn-sign-up" mat-fab extended >
                         <mat-icon>check_circle</mat-icon>
                         Submit
                     </button>
