modify inventory components

--- a/src/app/modules/inventory/components/warehouse/warehouse.html
+++ b/src/app/modules/inventory/components/warehouse/warehouse.html
@@ -15,7 +15,7 @@
                     </div><!-- .wrapper -->
                     <fieldset>
                         <legend>General Information</legend>
-                        <input type="hidden" id="warehouse_id" />
+                        <input type="hidden" id="warehouse_id" [field]="component.form.warehouse_id" />
                         <div class="field">
                             <mat-form-field appearance="outline">
                                 <mat-label>Name</mat-label>
