--- a/src/app/modules/inventory/components/warehouse-selector/warehouse-selector.html
+++ b/src/app/modules/inventory/components/warehouse-selector/warehouse-selector.html
@@ -1,5 +1,11 @@
 <div class="component component-inv-warehouse-selector">
-    <button id="btn_warehouse_selector" class="btn btn-selector btn-warehouse-selector" title="Select Warehouse">
-        <span>Select Warehouse</span>
-    </button>
-</div><!-- .component -->
+  <button
+    id="btn_warehouse_selector"
+    class="btn btn-selector btn-warehouse-selector"
+    title="Select Warehouse"
+    (click)="show_dialog($event)"
+  >
+    <span>Select Warehouse</span>
+  </button>
+</div>
+<!-- .component -->
