--- a/src/app/modules/inventory/components/warehouse/warehouse.html
+++ b/src/app/modules/inventory/components/warehouse/warehouse.html
@@ -1,67 +1,129 @@
 <div class="component component-inv-warehouse">
-    <mat-sidenav-container>
-        <mat-sidenav #nav_end_inv mode="over" position="end" disableClose="true">
-            <app-country-selector></app-country-selector>
-        </mat-sidenav>
-        <mat-sidenav-content>
-            <div class="wrapper form-wrapper">
-                <form id="form_warehouse" class="form-warehouse" (submit)="on_save($event)">
-                    <div class="wrapper">
-                        <mat-toolbar>
-                            <button type="submit" id="btn_warehouse_save" class="btn btn-warehouse-save" title="Save" mat-icon-button>
-                                <mat-icon>save</mat-icon>
-                            </button>
-                        </mat-toolbar>
-                    </div><!-- .wrapper -->
-                    <fieldset>
-                        <legend>General Information</legend>
-                        <input type="hidden" id="warehouse_id" [field]="component.form.warehouse_id" />
-                        <div class="field">
-                            <mat-form-field appearance="outline">
-                                <mat-label>Name</mat-label>
-                                <input type="text" id="name" class="field field-name" matInput [field]="component.form_warehouse.name" />
-                            </mat-form-field>
-                        </div><!-- .field -->
-                        <div class="field">
-                            <mat-form-field appearance="outline">
-                                <mat-label>Description</mat-label>
-                                <textarea id="description" class="field field-description" matInput [field]="component.form_warehouse.description" ></textarea>
-                            </mat-form-field>
-                        </div><!-- .field -->
-                    </fieldset>
-                    <fieldset>
-                        <legend>Address</legend>
-                        <input type="hidden" id="country_id" />
-                        <div class="field">
-                            <mat-form-field appearance="outline">
-                                <mat-label>Street</mat-label>
-                                <input type="text" id="street" class="field field-street" matInput [field]="component.form_warehouse.address.street" />
-                            </mat-form-field>
-                        </div><!-- .field -->
-                        <div class="field">
-                            <mat-form-field appearance="outline">
-                                <mat-label>City</mat-label>
-                                <input type="text" id="city" class="field field-city" matInput [field]="component.form_warehouse.address.city" />
-                            </mat-form-field>
-                        </div><!-- .field -->
-                        <div class="field">
-                            <mat-form-field appearance="outline">
-                                <mat-label>State</mat-label>
-                                <input type="text" id="state" class="field field-state" matInput [field]="component.form_warehouse.address.state" />
-                            </mat-form-field>
-                        </div><!-- .field -->
-                        <div class="field">
-                            <mat-form-field appearance="outline">
-                                <mat-label>ZIP</mat-label>
-                                <input type="text" id="zip" class="field field-zip" matInput [field]="component.form_warehouse.address.zip" />
-                            </mat-form-field>
-                        </div><!-- .field -->
-                        <div class="field">
-                            <app-country-selector multiple="false" (countries_selected)="on_countries_selected($event)"></app-country-selector>
-                        </div><!-- .field -->
-                    </fieldset>
-                </form>
-            </div><!-- .wrapper -->
-        </mat-sidenav-content>
-    </mat-sidenav-container>
-</div><!-- .component -->
+  <mat-sidenav-container>
+    <mat-sidenav #nav_end_inv mode="over" position="end" disableClose="true">
+      <app-country-selector></app-country-selector>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <div class="wrapper form-wrapper">
+        <form
+          id="form_warehouse"
+          class="form-warehouse"
+          (submit)="on_save($event)"
+        >
+          <div class="wrapper">
+            <mat-toolbar>
+              <button
+                type="submit"
+                id="btn_warehouse_save"
+                class="btn btn-warehouse-save"
+                title="Save"
+                mat-icon-button
+              >
+                <mat-icon>save</mat-icon>
+              </button>
+            </mat-toolbar>
+          </div>
+          <!-- .wrapper -->
+          <fieldset>
+            <legend>General Information</legend>
+            <input
+              type="hidden"
+              id="warehouse_id"
+              [field]="component.form_warehouse.warehouse_id"
+            />
+            <div class="field">
+              <mat-form-field appearance="outline">
+                <mat-label>Name</mat-label>
+                <input
+                  type="text"
+                  id="name"
+                  class="field field-name"
+                  matInput
+                  [field]="component.form_warehouse.name"
+                />
+              </mat-form-field>
+            </div>
+            <!-- .field -->
+            <div class="field">
+              <mat-form-field appearance="outline">
+                <mat-label>Description</mat-label>
+                <textarea
+                  id="description"
+                  class="field field-description"
+                  matInput
+                  [field]="component.form_warehouse.description"
+                ></textarea>
+              </mat-form-field>
+            </div>
+            <!-- .field -->
+          </fieldset>
+          <fieldset>
+            <legend>Address</legend>
+            <input type="hidden" id="country_id" />
+            <div class="field">
+              <mat-form-field appearance="outline">
+                <mat-label>Street</mat-label>
+                <input
+                  type="text"
+                  id="street"
+                  class="field field-street"
+                  matInput
+                  [field]="component.form_warehouse.address.street"
+                />
+              </mat-form-field>
+            </div>
+            <!-- .field -->
+            <div class="field">
+              <mat-form-field appearance="outline">
+                <mat-label>City</mat-label>
+                <input
+                  type="text"
+                  id="city"
+                  class="field field-city"
+                  matInput
+                  [field]="component.form_warehouse.address.city"
+                />
+              </mat-form-field>
+            </div>
+            <!-- .field -->
+            <div class="field">
+              <mat-form-field appearance="outline">
+                <mat-label>State</mat-label>
+                <input
+                  type="text"
+                  id="state"
+                  class="field field-state"
+                  matInput
+                  [field]="component.form_warehouse.address.state"
+                />
+              </mat-form-field>
+            </div>
+            <!-- .field -->
+            <div class="field">
+              <mat-form-field appearance="outline">
+                <mat-label>ZIP</mat-label>
+                <input
+                  type="text"
+                  id="zip"
+                  class="field field-zip"
+                  matInput
+                  [field]="component.form_warehouse.address.zip"
+                />
+              </mat-form-field>
+            </div>
+            <!-- .field -->
+            <div class="field">
+              <app-country-selector
+                multiple="false"
+                (countries_selected)="on_countries_selected($event)"
+              ></app-country-selector>
+            </div>
+            <!-- .field -->
+          </fieldset>
+        </form>
+      </div>
+      <!-- .wrapper -->
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
+<!-- .component -->
